2005-06-10  Miles Bader  <miles@gnu.org>

	* woman.el (woman-italic, woman-bold, woman-unknown)
	(woman-addition, woman-symbol-face):
	Remove "-face" suffix from face names.
	(woman-italic-face, woman-bold-face, woman-unknown-face)
	(woman-addition-face):
	New backward-compatibility aliases for renamed faces.
	(woman-default-faces, woman-monochrome-faces, woman-man-buffer)
	(woman-decode-region, woman-replace-match)
	(woman-display-extended-fonts, woman-special-characters)
	(woman-font-alist, woman-change-fonts, woman2-TH, woman2-SH):
	Use renamed woman faces.

	* longlines.el (longlines-visible-face): Face removed.

	* diff-mode.el (diff-header, diff-file-header, diff-index)
	(diff-hunk-header, diff-removed, diff-added, diff-changed)
	(diff-function, diff-context, diff-nonexistent): Remove "-face"
	suffix from face names.
	(diff-header-face, diff-file-header-face, diff-index-face)
	(diff-hunk-header-face, diff-removed-face, diff-added-face)
	(diff-changed-face, diff-function-face, diff-context-face)
	(diff-nonexistent-face): New backward-compatibility aliases for
	renamed faces.
	(diff-header-face, diff-file-header-face)
	(diff-index, diff-index-face, diff-hunk-header)
	(diff-hunk-header-face, diff-removed, diff-removed-face)
	(diff-added, diff-added-face, diff-changed-face, diff-function)
	(diff-function-face, diff-context-face, diff-nonexistent)
	(diff-nonexistent-face): Use renamed diff-mode faces.

	* progmodes/compile.el (compilation-warning-face)
	(compilation-info-face): Remove "-face" suffix from face names.
	(compilation-warning-face, compilation-info-face): 
	New backward-compatibility aliases for renamed faces.
	(compilation-warning-face, compilation-info-face):
	Use renamed compilation faces.

	* add-log.el (change-log-date, change-log-name)
	(change-log-email, change-log-file, change-log-list)
	(change-log-conditionals, change-log-function)
	(change-log-acknowledgement): Remove "-face" suffix from face names.